<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app_theme_header">

        <EditTextPreference
            app:key="header_color"
            app:title="@string/app_theme_header_color"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="black"/>

        <EditTextPreference
            app:key="background_color"
            app:title="@string/app_theme_background_color"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="white"
            app:singleLineTitle="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/backup_header">

        <Preference
            app:key="backup_all_notes"
            app:title="@string/backup_notes" />

        <Preference
            app:key="backup_recover_notes"
            app:title="@string/backup_recover" />

        <ListPreference
            app:defaultValue="10"
            app:entries="@array/backup_delete_entries"
            app:entryValues="@array/backup_delete_values"
            app:key="backup_delete_old_notes"
            app:title="@string/backup_delete"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
